Refactor authentication handling: remove NextAuth integration, clean up related files, and implement custom API for authentication

--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ NEXT_RFP_PERFORM_ANALYSIS = http://34.131.43.129:8501
 NEXT_PUBLIC_INVENTORY_MANAGEMENT = http://35.203.46.122:8001
 NEXT_REQUISITION_MANAGEMENT = http://35.203.46.122:8000
 NEXT_HOST_URL=http://localhost:5173
+NEXT_AUTH_URL=https://easework-auth.agreeablemeadow-f51dff9d.centralindia.azurecontainerapps.io
