--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@reduxjs/toolkit": "^2.3.0",
+    "@tanstack/react-query": "^5.61.3",
     "@tanstack/react-table": "^8.20.5",
     "@types/node": "20.5.7",
     "@types/react": "^18.3.12",
